--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body class="texto">
     <img class="titulo" src="Logo.png" alt="">
     <div>
-        <input class="button__input" type="text" id="inputTexto" value="Ingrese el texto aquí">
+        <p class="titulo__parrafo"> Solo letras minúsculas y sin acentos</p>
+        <input class="button__input" type="text" id="inputTexto" placeholder="Ingrese el texto aquí">
         <div class="button">
             <button class="button__encriptador" type="button" onclick="incrementar()">Encriptar</button>
             <button class="button__desencriptador" type="button" onclick="decrementar()">Desencriptar</button>
